--- a/package.json
+++ b/package.json
@@ -18,5 +18,21 @@
   "bugs": {
     "url": "https://github.com/AnastasiiaPavlovska/tasty-treats-group-11/issues"
   },
-  "homepage": "https://github.com/AnastasiiaPavlovska/tasty-treats-group-11#readme"
+  "homepage": "https://github.com/AnastasiiaPavlovska/tasty-treats-group-11#readme",
+  "dependencies": {
+    "@glidejs/glide": "^3.6.0",
+    "axios": "^1.3.4",
+    "glob": "^9.3.2",
+    "lodash.debounce": "^4.0.8",
+    "modern-normalize": "^1.1.0",
+    "notiflix": "^3.2.6",
+    "swiper": "^9.1.1",
+    "tui-pagination": "^3.4.1",
+    "vite": "^4.2.1",
+    "vite-plugin-full-reload": "^1.0.5",
+    "vite-plugin-html-info-inject": "^2.0.0"
+  },
+  "devDependencies": {
+    "@types/lodash.debounce": "^4.0.7"
+  }
 }
