--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "glob": "^9.3.2",
     "jquery": "^3.7.0",
     "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
     "swiper": "^9.1.1",
