--- a/package.json
+++ b/package.json
@@ -1,40 +1,40 @@
 {
-  "name": "tasty-treats",
-  "version": "1.0.0",
-  "directories": {
-    "doc": "docs"
-  },
-  "scripts": {
-    "start": "parcel src/*.html src/html/*.html",
-    "build": "parcel build src/*.html src/html/*.html --public-url ./"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AnastasiiaPavlovska/tasty-treats-group-11.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AnastasiiaPavlovska/tasty-treats-group-11/issues"
-  },
-  "homepage": "https://github.com/AnastasiiaPavlovska/tasty-treats-group-11#readme",
-  "dependencies": {
-    "@glidejs/glide": "^3.6.0",
-    "axios": "^1.3.4",
-    "glob": "^9.3.2",
-    "jquery": "^3.7.0",
-    "lodash.debounce": "^4.0.8",
-    "lodash.throttle": "^4.1.1",
-    "modern-normalize": "^1.1.0",
-    "notiflix": "^3.2.6",
-    "swiper": "^9.1.1",
-    "tui-pagination": "^3.4.1"
-  },
-  "devDependencies": {
-    "@types/lodash.debounce": "^4.0.7",
-    "buffer": "^5.7.1",
-    "parcel": "^2.9.3",
-    "parcel-reporter-clean-dist": "^1.0.4",
-    "posthtml-include": "^1.7.4"
-  }
+    "name": "tasty-treats",
+    "version": "1.0.0",
+    "directories": {
+        "doc": "docs"
+    },
+    "scripts": {
+        "start": "parcel src/*.html src/html/*.html",
+        "build": "parcel build src/*.html src/html/*.html --public-url ./"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/AnastasiiaPavlovska/tasty-treats-group-11.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/AnastasiiaPavlovska/tasty-treats-group-11/issues"
+    },
+    "homepage": "https://github.com/AnastasiiaPavlovska/tasty-treats-group-11",
+    "dependencies": {
+        "@glidejs/glide": "^3.6.0",
+        "axios": "^1.3.4",
+        "glob": "^9.3.2",
+        "jquery": "^3.7.0",
+        "lodash.debounce": "^4.0.8",
+        "lodash.throttle": "^4.1.1",
+        "modern-normalize": "^1.1.0",
+        "notiflix": "^3.2.6",
+        "swiper": "^9.1.1",
+        "tui-pagination": "^3.4.1"
+    },
+    "devDependencies": {
+        "@types/lodash.debounce": "^4.0.7",
+        "buffer": "^5.7.1",
+        "parcel": "^2.9.3",
+        "parcel-reporter-clean-dist": "^1.0.4",
+        "posthtml-include": "^1.7.4"
+    }
 }
