--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
         "doc": "docs"
     },
     "scripts": {
-        "start": "parcel src/*.html src/html/*.html",
-        "build": "parcel build src/*.html src/html/*.html --public-url ./"
+        "start": "parcel src/*.html",
+        "build": "parcel build src/*.html --public-url ./"
     },
     "repository": {
         "type": "git",
